Добавил блок для картинок слайдера и стилизовал его в случае непрогрузки картинок

--- a/index.html
+++ b/index.html
@@ -34,16 +34,20 @@
     <main>
       <h1 class="visually-hidden">Сайт студии "Нёрдс"</h1>
 
-      <section>
+      <section class="slogan-section">
         <h2 class="visually-hidden">Слайдер</h2>
 
         <div>
           <h3>Долго, дорого, скурпулезно.</h3>
           <p>Математически выверенный дизайн для вашего сайта и мобильного приложения.</p>
           <button type="button">Узнать больше</button>
-          <img src="img/decor/slide-picture-1.jpg" width="300" height="300" alt="Контент для слайдера рисунок 1">
-          <img src="img/decor/slide-picture-2.jpg" width="300" height="300" alt="Контент для слайдера рисунок 2">
-          <img src="img/decor/slide-picture-3.jpg" width="300" height="300" alt="Контент для слайдера рисунок 3">
+
+          <figure>
+            <img src="img/decor/slide-picture-1.jpg" width="300" height="300" alt="Контент для слайдера рисунок 1">
+            <img src="img/decor/slide-picture-2.jpg" width="300" height="300" alt="Контент для слайдера рисунок 2">
+            <img src="img/decor/slide-picture-3.jpg" width="300" height="300" alt="Контент для слайдера рисунок 3">
+          </figure>
+
         </div> 
         <ul>
           <li>
