Поменял стилистику секции преимуществ
-исправил отсутствие закрывающего тега </h3>
-поменял форматирование текста
-поменял оформление кнопок и их поведение

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <section class="slogan-section">
         <h2 class="visually-hidden">Слайдер</h2>
 
-        <div>
+        <div class="slogan-section">
           <h3>Долго, дорого, скурпулезно.</h3>
           <p>Математически выверенный дизайн для вашего сайта и мобильного приложения.</p>
           <button type="button">Узнать больше</button>
@@ -48,8 +48,8 @@
             <img src="img/decor/slide-picture-3.jpg" width="300" height="300" alt="Контент для слайдера рисунок 3">
           </figure>
 
-        </div> 
-        <ul>
+        </div >  
+        <ul class="slogan-slide-buttons">
           <li>
             <button type="button"><span>Слайд 1<span></button>
           </li>
@@ -62,26 +62,26 @@
         </ul>
       </section>
 
-      <section>
-        <h2 class="visually-hidden">Блок с заказами</h2>
+      <section class="features-section">
+        <h2 class="visually-hidden">Преимущества и заказы</h2>
 
-        <div>
+        <div class="feature-web-sites">
           <img src="img/decor/advantage-picture-red.jpg" width="200" height="100" alt="Значок ВЕБ-САЙТЫ">
-          <h3>Веб-сайты<h3>
+          <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <button type="button">Заказать</button>
         </div>
 
-        <div>
+        <div class="feature-apps">
           <img src="img/decor/advantage-picture-green.jpg" width="200" height="100" alt="Значок ПРИЛОЖЕНИЯ">
-          <h3>Приложения<h3>
+          <h3>Приложения</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <button type="button">Заказать</button>
         </div>
 
-        <div>
+        <div class="feature-presentations">
           <img src="img/decor/advantage-picture-yellow.jpg" width="200" height="100" alt="Значок ПРЕЗЕНТАЦИИ">
-          <h3>Презентации<h3>
+          <h3>Презентации</h3>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <button type="button">Заказать</button>
         </div>
