Поменял название секции features на orders

--- a/index.html
+++ b/index.html
@@ -62,24 +62,24 @@
         </ul>
       </section>
 
-      <section class="features-section">
+      <section class="order-section">
         <h2 class="visually-hidden">Преимущества и заказы</h2>
 
-        <div class="feature-web-sites">
+        <div class="order-web-sites">
           <img src="img/decor/advantage-picture-red.jpg" width="200" height="100" alt="Значок ВЕБ-САЙТЫ">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <button type="button">Заказать</button>
         </div>
 
-        <div class="feature-apps">
+        <div class="order-apps">
           <img src="img/decor/advantage-picture-green.jpg" width="200" height="100" alt="Значок ПРИЛОЖЕНИЯ">
           <h3>Приложения</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <button type="button">Заказать</button>
         </div>
 
-        <div class="feature-presentations">
+        <div class="order-presentations">
           <img src="img/decor/advantage-picture-yellow.jpg" width="200" height="100" alt="Значок ПРЕЗЕНТАЦИИ">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
