Добавил стилизацию секции с описанием компании
Стилизация текста и фона

--- a/index.html
+++ b/index.html
@@ -87,17 +87,19 @@
         </div>
       </section>
 
-      <section>
+      <section class="about-company-section">
         <h2 class="visually-hidden">Описание</h2>
 
-        <div>
+        <div class="description-company"> 
           <h3>Мы - маленькая, но гордая дизайн-студия из Краснодара</h3>
+          
           <p>
             Исповедуем принципы минимализма и чистоты. 
             Ставим математический расчет превыше креатива.
             Работаем не покладая рук, как роботы.
           </p>
-          <p>Выполняем заказы на разработку:</p>
+          <p class="list-works">Выполняем заказы на разработку:</p>
+
           <ul>
             <li>Веб-сайтом любой сложности</li>
             <li>Мобильныйх приложений для iOS и Android</li>
@@ -105,9 +107,11 @@
           </ul>
         </div>
 
-        <div>
-          <img src="img/decor/nerds-picture.png" alt="Картинка Нёрдс">
+        <div class="features-company">
+          <img src="img/decor/nerds-picture.png" alt="Картинка Нёрдс" width="200" height="100">
+
           <h3>с 2004 года любим точность во всем:</h3>
+
           <ul>
             <li><span>146%</span> Уровень самоотдачи</li>
             <li><span>100%</span> Соблюдение сроков</li>
