Добавил стили и псевдокласы к логотипам ссылок

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="description-company"> 
           <h3>Мы - маленькая, но гордая дизайн-студия из Краснодара</h3>
-          
+
           <p>
             Исповедуем принципы минимализма и чистоты. 
             Ставим математический расчет превыше креатива.
@@ -123,7 +123,7 @@
       <section>
         <h2 class="visually-hidden">Ссылки на сайты-партнеры</h2>
 
-        <ul>
+        <ul class="links-partners">
           <li>
             <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/decor/htmlacademy-logo.png" alt="Сайт HTML-Academy"></a>
           </li>
