--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </ul>
       </section>
           
-      <section>
+      <section class="location-description">
         <h2 class="visually-hidden">Расположение на карте</h2>
 
          <div>
@@ -147,7 +147,7 @@
           <img src="img/decor/map-marker-png.png" width="100" height="100" alt="Маркер NERDS на карте"> 
          </div> 
       
-        <div>
+        <div class="contact-description">
           <h3>NERDS DESIGN STUDIO</h3>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           <p>тел. +7 (812) 275-75-75</p>
@@ -155,7 +155,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="contact-form">
         <form action="#" method="POST">
           <h2 class=>Напишите нами</h2>
 
