Стилизовал футер и скрыл форму в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -179,7 +179,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="contact-form"> 
         <form action="#" method="POST">
           <h2 class=>Напишите нами</h2>
 
@@ -197,27 +197,35 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="site-footer">
       <h2 class="visually-hidden">Футер</h2>
 
       <ul>
-        <li><a href="#"> 
-          <img src="img/decor/vk-icon.svg" width="20" height="20" alt="Логотип ВК">
-          Вконтакте</a>
-        </li>
-        <li><a href="#">
-          <img src="img/decor/fb-icon.svg" width="20" height="20" alt="Логотип Фейсбук">
-          Фейсбук</a>
+        <li>
+          <a href="#">
+            <div class="footer-social-links">
+              <img src="img/decor/vk-icon.svg" width="21" height="21" alt="Логотип ВК">
+            </div>
+          </a>
         </li>
         <li>
           <a href="#">
-            <img src="img/decor/insta-icon.svg" width="20" height="20" alt="Логотип Инстаграмм">
-            Инстаграмм</a>
+            <div class="footer-social-links">
+              <img src="img/decor/fb-icon.svg" width="21" height="21" alt="Логотип Фейсбук">
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="footer-social-links">
+              <img src="img/decor/insta-icon.svg" width="21" height="21" alt="Логотип Инстаграмм">
+            </div>
+          </a>
         </li>
       </ul>
 
       <div>
-        <p>Давайте дружить, это выгодно!</p>
+        <h3>Давайте дружить, это выгодно!</h3>
         <p>Скидка 10% для друзей из социальных сетей</p>
       </div>
     </footer> 
