--- a/catalog.html
+++ b/catalog.html
@@ -148,18 +148,49 @@
       <section>
           <h2 class="visually-hidden">Отображаемый список товаров</h2>
 
-          <ul>
+          <ul class="product-catalog">
               <li>
-                <img src="img/content/img-sedona-jpg.jpg" width="100" height="200" alt="Товар Sedona"> 
-                <h3>SEDONA</h3>
+                <img class="item-header" src="img/decor/browser.svg" width="360" height="40" alt="Шапка товара">
+                <img src="img/content/img-sedona-jpg.jpg" width="360" height="576" alt="Товар Sedona"> 
+                <h3>Sedona</h3>
                 <p>Информационный сайт для туристов</p>
                 <button type="button">9 900 РУБ.</button>
               </li>
-              <li><img src="img/content/img-pink-jpg.jpg" width="100" height="200" alt="Товар САЙТ 3"></li>
-              <li><img src="img/content/img-barbershop-jpg.jpg" width="100" height="200" alt="Товар Borodinsky"></li>
-              <li><img src="img/content/img-mishka-jpg.jpg" width="100" height="200" alt="Товар Mishka"></li>
-              <li><img src="img/content/img-aplus-jpg.jpg" width="100" height="200" alt="Товар Aplus"></li>
-              <li><img src="img/content/img-kvast-jpg.jpg" width="100" height="200" alt="Товар Kravt"></li>
+              <li>
+                <img class="item-header" src="img/decor/browser.svg" width="360" height="40" alt="Шапка товара">
+                <img src="img/content/img-pink-jpg.jpg" width="360" height="576" alt="Товар САЙТ 3">
+                <h3>Pink App</h3>
+                <p>Продуктовый лендинг приложения для iOS и Android</p>
+                <button type="button">9 900 РУБ.</button>
+              </li>
+              <li>
+                <img class="item-header" src="img/decor/browser.svg" width="360" height="40" alt="Шапка товара">
+                <img src="img/content/img-barbershop-jpg.jpg" width="360" height="576" alt="Товар Borodinsky">
+                <h3>Barbershop</h3>
+                <p>Сайт салона красоты. Для мужчин, да.</p>
+                <button type="button">9 900 РУБ.</button>
+              </li>
+              <li>
+                <img class="item-header" src="img/decor/browser.svg" width="360" height="40" alt="Шапка товара">
+                <img src="img/content/img-mishka-jpg.jpg" width="360" height="576" alt="Товар Mishka">
+                <h3>Mishka</h3>
+                <p>Интернет-магазин вязаных игрушек</p>
+                <button type="button">9 900 РУБ.</button>
+              </li>
+              <li>
+                <img class="item-header" src="img/decor/browser.svg" width="360" height="40" alt="Шапка товара">
+                <img src="img/content/img-aplus-jpg.jpg" width="360" height="576" alt="Товар Aplus">
+                <h3>A Plus</h3>
+                <p>Лендинг курсов повышения квалификации</p>
+                <button type="button">9 900 РУБ.</button>
+              </li>
+              <li>
+                <img class="item-header" src="img/decor/browser.svg" width="360" height="40" alt="Шапка товара">
+                <img src="img/content/img-kvast-jpg.jpg" width="360" height="576" alt="Товар Kravt">
+                <h3>Кваст</h3>
+                <p>Промо-сайт производителя крафтового кваса</p>
+                <button type="button">9 900 РУБ.</button>
+              </li>
           </ul>
 
         <div>
