Полностью рабочая вменяемая шапка

--- a/catalog.html
+++ b/catalog.html
@@ -9,18 +9,18 @@
   </head>
   <body>
 
-    <header>
+    <header class="main-header">
       <h2 class="visually-hidden">Шапка сайта</h2>
 
       <nav class="main-navigation">
-        <a href="index.html">
-          <img class="main-header-logo" src="img/decor/nerds-logo.svg" width="150" height="80" alt="Логотип Нёрдс">
+        <a class="main-header-logo" href="index.html">
+          <img src="img/decor/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
         </a>
 
         <ul class="site-navigation">
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
-          <li class="current-page">Магазин</li>
+          <li class="current-page"><span>Магазин</span></li>
           <li><a href="#">Контакты</a></li>
         </ul> 
 
