--- a/catalog.html
+++ b/catalog.html
@@ -251,25 +251,25 @@
     <footer class="site-footer">
       <h2 class="visually-hidden">Футер</h2>
 
-      <ul>
+      <ul class="footer-social-contacts">
         <li>
           <a href="#">
-            <img src="img/decor/vk-icon.svg" width="21" height="21" alt="Логотип ВК">
+            <img class="footer-vk-icon" src="img/decor/vk-icon.svg" width="26" height="15" alt="Логотип ВК">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="img/decor/fb-icon.svg" width="21" height="21" alt="Логотип Фейсбук">
+            <img class="footer-facebook-icon" src="img/decor/fb-icon.svg" width="12" height="22" alt="Логотип Фейсбук">
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="img/decor/insta-icon.svg" width="21" height="21" alt="Логотип Инстаграмм">
+            <img class="footer-instagram-icon" src="img/decor/insta-icon.svg" width="21" height="21" alt="Логотип Инстаграмм">
           </a>
         </li>
       </ul>
 
-      <div>
+      <div class="discount-info">
         <h3>Давайте дружить, это выгодно!</h3>
         <p>Скидка 10% для друзей из социальных сетей</p>
       </div>
