--- a/index.html
+++ b/index.html
@@ -37,29 +37,37 @@
       <section class="slogan-section">
         <h2 class="visually-hidden">Слайдер</h2>
 
-        <div class="slogan-section">
+        <div class="slogan-description">
           <h3>Долго, дорого, скурпулезно.</h3>
           <p>Математически выверенный дизайн для вашего сайта и мобильного приложения.</p>
           <button type="button">Узнать больше</button>
+        </div>
 
+        <div class="slogan-slider">
           <figure>
-            <img src="img/decor/slide-picture-1.jpg" width="300" height="300" alt="Контент для слайдера рисунок 1">
-            <img src="img/decor/slide-picture-2.jpg" width="300" height="300" alt="Контент для слайдера рисунок 2">
-            <img src="img/decor/slide-picture-3.jpg" width="300" height="300" alt="Контент для слайдера рисунок 3">
+            <img src="img/decor/slide-picture-1.jpg" width="698" height="413" alt="Контент для слайдера рисунок 1">
+            <!-- временно для разметки
+            <img src="img/decor/slide-picture-2.jpg" width="698" height="413" alt="Контент для слайдера рисунок 2">
+            <img src="img/decor/slide-picture-3.jpg" width="698" height="413" alt="Контент для слайдера рисунок 3">
+            -->
           </figure>
 
-        </div>  
-        <ul class="slogan-slide-buttons">
-          <li>
-            <button type="button"><span>Слайд 1<span></button>
-          </li>
-          <li>
-            <button type="button"><span>Слайд 2<span></button>
-          </li>
-          <li>
-            <button type="button"><span>Слайд 3<span></button>
-          </li>
-        </ul>
+          <ul class="slogan-slider-radio">
+            <li>
+              <input type="radio" name="slider" value="slide1">
+            </li>
+            <li>
+              <input type="radio" name="slider" value="slide2">
+            </li>
+            <li>
+              <input type="radio" name="slider" value="slide3">
+            </li>
+          </ul>
+        </div>
+
+
+          
+
       </section>
 
       <section class="order-section">
